[package]
name = "greenhorn"
version = "0.1.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"

[dependencies]
async-timer = "0.6.1"
futures = "0.3"
log = "0.4.8"
tungstenite = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "2.0.2"
proc-macro-hack = "0.5.11"
html_macro = { path = "html_macro" }
proc-macro-nested = "0.1.3"

[dependencies.async-std]
version = "1.4.0"
features = ["unstable"]

[dependencies.async-tungstenite]
version = "0.3.1"
features = ["async-std-runtime"]

[dev-dependencies]
url = "2.1.0"
assert_matches = "1.3.0"
