[package]
name = "greenhorn_web_view"
version = "0.1.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
greenhorn = {path = ".."}
web-view = "0.6.0"

[dependencies.async-std]
version = "1.4.0"
features = ["unstable"]
