[package]
name = "greenhorn_web_view"
version = "0.1.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
greenhorn = {path = "..", features = ["native-dialogs"]}
wry = {version = "0.9", features = ["protocol"]}
serde_json = "1.0"
tokio = {version = "1", features = ["net"]}
